invoiceninja/DeploymentConfig.yaml
apiVersion: v1
kind: DeploymentConfig
metadata:
  labels:
    app: invoiceninja
  name: invoiceninja
spec:
  replicas: 1
  selector:
    app: invoiceninja
    deploymentconfig: invoiceninja
  strategy:
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: invoiceninja
        deploymentconfig: invoiceninja
    spec:
      containers:
      - image: invoiceninja/invoiceninja:latest
        imagePullPolicy: Always
        name: invoiceninja
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        volumeMounts:
        - mountPath: /app
          name: invoiceninja
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      securityContext: {}
      terminationGracePeriodSeconds: 30
      volumes:
      - name: invoiceninja
        persistentVolumeClaim:
          claimName: invoiceninja
  triggers:
  - type: ConfigChange
  - imageChangeParams:
      automatic: true
      containerNames:
      - invoiceninja
      from:
        kind: ImageStreamTag
        name: invoiceninja:latest
    type: ImageChange
