invoiceninja/Services.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: invoiceninja
  name: invoiceninja
spec:
  ports:
  - name: 8080-tcp
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: invoiceninja
    deploymentconfig: invoiceninja
  sessionAffinity: None
  type: ClusterIP
