invoiceninja/Route.yaml
apiVersion: v1
kind: Route
metadata:
  name: invoiceninja
spec:
  to:
    kind: Service
    name: invoiceninja
